src/objects/BT_INT_PARAM_CONFIG__c.object
<CustomObject>
    <description>custom object to dynamically generate query for batch interfaces</description>
    <fields>
        <fullName>field_name__c</fullName>
        <description>field to be pulled from the sObject</description>
        <label>field_name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field_sequence__c</fullName>
        <description>sequence in which the field should appear in the query</description>
        <label>field_sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>from_object__c</fullName>
        <description>the object from which the field data needs to be pulled</description>
        <label>from_object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interface_name__c</fullName>
        <label>interface_name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postOpFieldName__c</fullName>
        <label>postOpFieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BT_INT_PARAM_CONFIG</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_INT_PARAM_CONFIGS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>